just upload directly, ignore safety problem